- Fixed dnsrmhost's duplicate errors
- Fixed dnsmkzone reverse zone reverse range assignment creation
- Removed list functionality from dnsrmhost
- Removed list functionality from dnsrmusergroup
- Made allow/deny flags required for dnsmkacl.
- Made dnsmkzone require a zone name.
- Made dnsrmhost require the target, fixed unittest.
- Fixed @ targets
- Added dnslsacl tool
- Added dnsrmacl tool

2010-01-27 release-0.11
- Fixed dnsmkacl warning with no arguments
- Fixed make all arugments in dnsmkusergroup and dnsmkzone
- Fixed DnsError in dnsrmrecord
- Fixed record being identified as IPv6 when it's not problem.

2009-12-18 release-0.10
- Moved CheckCredentials function to roster_client_lib from cli_common_lib
- Made CheckCredentials run when credential file is invalid.
- Fixed incorrect credential file location in cli_record_lib functions.

2009-12-09 release-0.9

2009-12-07 release-0.8
- Fixed error in roster_client_lib that would prevent tools from working if no
  credfile was present.
- Created user-tools bootstrap to write out roster_user.conf.

2009-11-16 release-0.7
- Added MANIFEST to fix install problems.

2009-11-16 release-0.6
- Made roster_client_lib have a fallback if errors cant be made nicer
- Made nice error if zone does not exist in dnsmkhost
- Made dnsmkzone actually have a -t option
- Made dnsmkhost not include views in zone_info so the error message is more specific
- Fixed dnsmkzone's handling of reverse zones, fixed unittest
- Fixed dnsmkview erroring out after already making view.
- Fixed dnslsview KeyError with dns server sets.
- Removed list function from dnsmkhost.
- Fixed dnsmkview erroring out for no acl existing after creating a view
- Fixed dnsmkview unittest.
- Removed -i flag in dnslshost as it is not used.
- Fixed errors in remove record in cli_record_lib.
- Changed default ttl from 5 to 3600 in dns*host.
- Made ttl an int in cli_record_lib.
- Fixed dnsrmhost not removing PTR records.
- Standardized record not found error in dnsrmhost.